# Nativehook_linux_planb

./: .gitignore  AGENTS.md  README.md  index.html  start_prompt.txt  styles.css
analysis_scripts/: linux_pseudo_hook_benchmark.cpp  plot_native_hook_baseline.py  plot_planb_blocked_results.py  plot_planb_sweep_results.py
linux_native_hook_v1/: CMakeLists.txt  README.md
linux_native_hook_v1/common/: address_handler.h  hook_record.h  shm_layout.h  socket_fd.cpp  socket_fd.h  stack_writer.cpp  stack_writer.h  unix_defs.h
linux_native_hook_v1/consumer/: control_server.cpp  control_server.h  metrics.cpp  metrics.h  server_main.cpp  shm_consumer.cpp  shm_consumer.h
linux_native_hook_v1/ebpf_probe/: README.md  uprobe_common.h  uprobe_count_only.bt.in  uprobe_loader.cpp  uprobe_probe.bpf.c  uprobe_ring_output.bt.in  uprobe_sample_filter.bt.in  uprobe_tracking.bt.in
linux_native_hook_v1/producer_fake/: fake_client_main.cpp  fake_writer.cpp  fake_writer.h
linux_native_hook_v1/producer_hook/: ablation_config.cpp  ablation_config.h  hook_guard.cpp  hook_guard.h  hook_preload.cpp  hook_socket_client.h  hook_writer.cpp  hook_writer.h  hotpath_profile.cpp  hotpath_profile.h
linux_native_hook_v1/results/: blocked_comparison_2026-04-28.csv  blocked_filter_size_sweep_2026-04-28.csv  blocked_sample_interval_sweep_2026-04-28.csv  diag_stage6_batch_default_off_t8_t16_server_2026-05-29.csv  diag_stage6_batch_size_16_t8_t16_server_2026-05-29.csv  diag_stage6_batch_size_32_t8_t16_server_2026-05-29.csv  diag_stage6_batch_size_32_t8_t16_server_2026-05-29_repeat.csv  diag_stage6_batch_size_4_t8_t16_server_2026-05-29.csv  diag_stage6_batch_size_64_t8_t16_server_2026-05-29_repeat.csv  diag_stage6_batch_size_8_t8_t16_server_2026-05-29.csv  diag_stage6_consumer_count_only_t8_t16_server_2026-05-29.csv  diag_stage6_full_notify_threshold_100_server_2026-05-29.csv  diag_stage6_full_notify_threshold_2000_server_2026-05-29.csv  diag_stage6_full_notify_threshold_20_server_2026-05-29.csv  diag_stage6_full_notify_threshold_500_server_2026-05-29.csv  diag_stage6_read_index_cache_t8_t16_server_2026-05-29.csv  diag_stage6_read_index_cache_t8_t16_server_2026-05-29_repeat.csv  diag_stage6_record_fill_outside_lock_t8_t16_server_2026-05-29.csv  diag_stage6_record_fill_outside_lock_t8_t16_server_2026-05-29_repeat.csv  ebpf_uprobe_comparison_server_2026-05-25.csv  filter_size_sweep_2026-04-27.csv  hook_ablation_server_2026-05-06.csv  hook_cache_on_residual_ablation_server_2026-05-08.csv  hook_fixed_work_profile_server_2026-05-27.csv  hook_fixed_work_stage4_profile_server_2026-05-27.csv  hook_hotpath_profile_optimization_compare_server_2026-05-27.csv  hook_hotpath_profile_server_2026-05-25.csv  hook_per_thread_tracking_miss_fallback_server_2026-05-26.csv  hook_per_thread_tracking_server_2026-05-08.csv  hook_pid_tid_cache_optimization_server_2026-05-07.csv  hook_pid_tid_overall_impact_server_2026-05-25.csv  hook_pid_tid_subablation_server_2026-05-07.csv  hook_record_write_subablation_server_2026-05-07.csv  hook_tracking_optimization_server_2026-05-08.csv  hook_tracking_overall_impact_server_2026-05-25.csv  hook_tracking_subablation_server_2026-05-07.csv  hook_writer_ring_impact_notify_after_unlock_server_2026-05-29.csv  hook_writer_ring_impact_notify_after_unlock_server_2026-05-29_repeat.csv  hook_writer_ring_impact_record_fill_outside_lock_server_2026-05-29.csv  hook_writer_ring_impact_server_2026-05-28.csv  (+6 more)
linux_native_hook_v1/scripts/: run_batch_semantic_test.sh  run_consumer.sh  run_ebpf_uprobe_comparison.sh  run_fake_demo.sh  run_hook_ablation.sh  run_hook_benchmark.sh  run_hook_cache_on_residual_ablation.sh  run_hook_fixed_work_profile.sh  run_hook_hotpath_profile.sh  run_hook_per_thread_tracking.sh  run_hook_pid_tid_cache_optimization.sh  run_hook_pid_tid_overall_impact.sh  run_hook_pid_tid_subablation.sh  run_hook_record_write_subablation.sh  run_hook_subablation.sh  run_hook_sweep.sh  run_hook_tracking_optimization.sh  run_hook_writer_ring_impact.sh  run_hook_writer_ring_mutex_ablation.sh  run_libbpf_fixed_work_comparison.sh  run_libbpf_uprobe_comparison.sh  run_stack_writer_bench.sh
linux_native_hook_v1/tests/: ablation_config_test.cpp  batch_semantic_test.cpp  cross_thread_free_linux.cpp  libbpf_uprobe_common_test.cpp  perf_test_data_linux.cpp
notes/: native_hook_baseline_report_2026-04-20.md  native_hook_ebpf_uprobe_comparison_2026-05-25.md  native_hook_fixed_work_profile_2026-05-27.md  native_hook_flush_batching_讲解.md  native_hook_handoff_2026-05-29.md  native_hook_hotpath_profile_2026-05-25.md  native_hook_hotpath_profile_optimization_compare_2026-05-27.md  native_hook_libbpf_fixed_work_comparison_2026-05-27.md  native_hook_libbpf_uprobe_comparison_2026-05-25.md  native_hook_libbpf_uprobe_repeat_2026-05-26.md  native_hook_pid_tid_overall_impact_2026-05-25.md  native_hook_planB_cache_on_residual_ablation_2026-05-08.md  native_hook_planB_hotpath_ablation_2026-05-06.md  native_hook_planB_per_thread_tracking_2026-05-08.md  native_hook_planB_pid_tid_cache_optimization_2026-05-07.md  native_hook_planB_pid_tid_subablation_2026-05-07.md  native_hook_planB_progress_2026-04-24.md  native_hook_planB_progress_2026-04-27.md  native_hook_planB_progress_2026-04-28.md  native_hook_planB_record_write_subablation_2026-05-07.md  native_hook_planB_sweep_results_2026-04-27.md  native_hook_planB_thread_local_miss_fallback_2026-05-26.md  native_hook_planB_tracking_optimization_2026-05-08.md  native_hook_planB_tracking_subablation_2026-05-07.md  native_hook_planB_writer_ring_mutex_ablation_2026-05-08.md  native_hook_server_plan_2026-04-24.md  native_hook_sharded_ring_proposal.md  native_hook_stage6_batch_publish_2026-05-29.md  native_hook_stage6_batch_semantic_validation_2026-05-29.md  native_hook_tracking_overall_impact_2026-05-25.md  native_hook_writer_notify_after_unlock_2026-05-29.md  native_hook_writer_record_fill_outside_lock_2026-05-29.md  native_hook_writer_ring_impact_2026-05-28.md  native_hook_入门复习.md  prototype_experiment_summary.md  work_log_2026-06-01.md  work_log_2026-06-05.md  work_log_2026-06-08.md  (+3 more)
(+11 files in other folders)
